Document the end-to-end runs, the CPU sets and the heap-only caveat
RESULTS.md section 5 has both tables.  The reading: the three allocators are
indistinguishable on HTTP/1.1 because the server spends ~46 us of event-loop time
per request against 0.03-0.05 us of counted arena work, so the end-to-end test
cannot resolve them; the RSS climb to ~1.5 GB is the 2 GB Java heap filling
between young GCs, identical for all three.  The HTTP/2 arena run failed with no
server-side exception and the cause is not established.

The heap-only caveat is stated plainly: -Dio.netty.noPreferDirect=true does not
reach ioBuffer(), so the inbound read buffers are direct, go to the fallback and
are not counted.